--- a/style.css
+++ b/style.css
@@ -12,3 +12,9 @@ margin-top: 20%;
     justify-content: space-between;
     
 }
+
+
+body {
+    background-image: url("img/background-3.png");
+    background-size: cover;
+}
